fix: text vertical overflow

--- a/src/components/cards/product-card/product-card.module.css
+++ b/src/components/cards/product-card/product-card.module.css
@@ -14,6 +14,7 @@
 }
 
 .name {
+  block-size: 1lh;
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
